Fix clipped label on change password form in /settings

--- a/public/secure/reset.css
+++ b/public/secure/reset.css
@@ -2,6 +2,11 @@ body {
   overflow: hidden;
 }
 
+/* Avoid clipping label on /settings page */
+.reset-form {
+  padding-top: 0.5rem;
+}
+
 .group:first-of-type {
   margin-top: 0;
 }
